--- a/swiperv2/Base.lproj/Main.storyboard
+++ b/swiperv2/Base.lproj/Main.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,18 +19,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="poN-UU-mtJ">
-                                <rect key="frame" x="0.0" y="44" width="375" height="623"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hp6-Ow-UnC">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                                <items>
-                                    <navigationItem title="Swiper" id="WoG-za-z5U"/>
-                                </items>
-                            </navigationBar>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gmP-cw-eQd">
-                                <rect key="frame" x="85" y="93" width="204" height="66"/>
+                                <rect key="frame" x="75" y="20" width="224" height="66"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="66" id="iIW-5s-hN6"/>
+                                    <constraint firstAttribute="height" constant="66" id="hF3-Ku-93G"/>
                                 </constraints>
                                 <attributedString key="attributedText">
                                     <fragment content="SWIPER">
@@ -45,21 +38,18 @@
                                 <nil key="highlightedColor"/>
                                 <color key="shadowColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Determining your future...." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KxR-NH-bgL">
-                                <rect key="frame" x="16" y="563" width="343" height="72"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Determining your future...." textAlignment="center" lineBreakMode="characterWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KxR-NH-bgL">
+                                <rect key="frame" x="8" y="535" width="360" height="100"/>
                                 <color key="backgroundColor" red="0.87186706852791884" green="0.0" blue="0.74603037458612853" alpha="0.080654965753424693" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="72" id="1V7-eA-GRA"/>
+                                    <constraint firstAttribute="height" constant="100" id="AIF-kt-GXf"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WMY-cl-JTG">
-                                <rect key="frame" x="72" y="337" width="230" height="218"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="218" id="pYb-UP-fCz"/>
-                                </constraints>
+                                <rect key="frame" x="55" y="208" width="264" height="250"/>
                                 <state key="normal" backgroundImage="Button-BG">
                                     <attributedString key="attributedTitle">
                                         <fragment content="FUTURE">
@@ -78,22 +68,20 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="KxR-NH-bgL" firstAttribute="top" secondItem="WMY-cl-JTG" secondAttribute="bottom" constant="8" symbolic="YES" id="0Av-B5-gu4"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="KxR-NH-bgL" secondAttribute="bottom" constant="32" id="0Jh-XS-9kx"/>
-                            <constraint firstItem="hp6-Ow-UnC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="3Hl-WX-u3u"/>
-                            <constraint firstItem="poN-UU-mtJ" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="7fi-EZ-wl1"/>
-                            <constraint firstItem="hp6-Ow-UnC" firstAttribute="trailing" secondItem="poN-UU-mtJ" secondAttribute="trailing" id="Dfg-MT-hWV"/>
-                            <constraint firstItem="WMY-cl-JTG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="72" id="JRN-0H-HRj"/>
-                            <constraint firstItem="hp6-Ow-UnC" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="LCa-tC-ykw"/>
-                            <constraint firstItem="poN-UU-mtJ" firstAttribute="top" secondItem="hp6-Ow-UnC" secondAttribute="bottom" id="TFB-RJ-TW3"/>
-                            <constraint firstItem="WMY-cl-JTG" firstAttribute="centerX" secondItem="KxR-NH-bgL" secondAttribute="centerX" id="TTz-po-ZvD"/>
-                            <constraint firstItem="gmP-cw-eQd" firstAttribute="top" secondItem="hp6-Ow-UnC" secondAttribute="bottom" constant="49" id="VFa-fN-W3F"/>
-                            <constraint firstItem="hp6-Ow-UnC" firstAttribute="leading" secondItem="poN-UU-mtJ" secondAttribute="leading" id="fP9-5v-36u"/>
-                            <constraint firstItem="KxR-NH-bgL" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="jmx-gI-giA"/>
-                            <constraint firstItem="gmP-cw-eQd" firstAttribute="centerX" secondItem="WMY-cl-JTG" secondAttribute="centerX" id="qMU-38-rVm"/>
-                            <constraint firstItem="gmP-cw-eQd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="85" id="vZh-fd-ql4"/>
-                            <constraint firstItem="hp6-Ow-UnC" firstAttribute="centerX" secondItem="gmP-cw-eQd" secondAttribute="centerX" id="wWj-Yq-QdB"/>
-                            <constraint firstAttribute="trailing" secondItem="hp6-Ow-UnC" secondAttribute="trailing" id="wdW-nq-VcM"/>
+                            <constraint firstItem="poN-UU-mtJ" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="1bT-vv-7hc"/>
+                            <constraint firstItem="KxR-NH-bgL" firstAttribute="top" secondItem="WMY-cl-JTG" secondAttribute="bottom" constant="77" id="8GU-tB-rIR"/>
+                            <constraint firstItem="WMY-cl-JTG" firstAttribute="centerX" secondItem="gmP-cw-eQd" secondAttribute="centerX" id="8SO-Mt-d87"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="KxR-NH-bgL" secondAttribute="bottom" constant="32" id="Ca9-mH-CyM"/>
+                            <constraint firstItem="WMY-cl-JTG" firstAttribute="centerY" secondItem="poN-UU-mtJ" secondAttribute="centerY" id="J2W-l5-2wA"/>
+                            <constraint firstItem="WMY-cl-JTG" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="XN6-dl-PQ7"/>
+                            <constraint firstItem="KxR-NH-bgL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="bXs-Fc-du5"/>
+                            <constraint firstItem="poN-UU-mtJ" firstAttribute="centerX" secondItem="gmP-cw-eQd" secondAttribute="centerX" id="cso-3h-ek6"/>
+                            <constraint firstItem="poN-UU-mtJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="lsv-fE-lVb"/>
+                            <constraint firstItem="gmP-cw-eQd" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="p4H-pl-E8j"/>
+                            <constraint firstItem="KxR-NH-bgL" firstAttribute="centerX" secondItem="poN-UU-mtJ" secondAttribute="centerX" id="p8j-gJ-TCy"/>
+                            <constraint firstItem="WMY-cl-JTG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="55" id="rcA-yv-I71"/>
+                            <constraint firstItem="gmP-cw-eQd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="75" id="t0W-sh-fpv"/>
+                            <constraint firstItem="KxR-NH-bgL" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ySA-L7-uOU"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -107,7 +95,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Button-BG" width="256" height="256"/>
-        <image name="Image" width="160" height="240"/>
+        <image name="Button-BG" width="512" height="512"/>
+        <image name="Image" width="320" height="480"/>
     </resources>
 </document>
