--- a/swiperv2/Base.lproj/Main.storyboard
+++ b/swiperv2/Base.lproj/Main.storyboard
@@ -6,7 +6,9 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Unknown constraint types" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,11 +20,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="poN-UU-mtJ">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="poN-UU-mtJ">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gmP-cw-eQd">
-                                <rect key="frame" x="75" y="20" width="224" height="66"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gmP-cw-eQd">
+                                <rect key="frame" x="85" y="20" width="205" height="66"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="66" id="hF3-Ku-93G"/>
                                 </constraints>
@@ -39,7 +41,7 @@
                                 <color key="shadowColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="12" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KxR-NH-bgL">
-                                <rect key="frame" x="16" y="563" width="343" height="72"/>
+                                <rect key="frame" x="16" y="535" width="343" height="100"/>
                                 <color key="backgroundColor" red="0.87186706852791884" green="0.0" blue="0.74603037458612853" alpha="0.080654965753424693" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="AIF-kt-GXf"/>
@@ -54,8 +56,8 @@
                                 </attributedString>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WMY-cl-JTG">
-                                <rect key="frame" x="55" y="208" width="264" height="250"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WMY-cl-JTG">
+                                <rect key="frame" x="72" y="340" width="231" height="218"/>
                                 <state key="normal" backgroundImage="Button-BG">
                                     <attributedString key="attributedTitle">
                                         <fragment content="FUTURE">
@@ -76,21 +78,18 @@
                         <constraints>
                             <constraint firstItem="KxR-NH-bgL" firstAttribute="top" secondItem="WMY-cl-JTG" secondAttribute="bottom" constant="8" symbolic="YES" id="0Av-B5-gu4"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="KxR-NH-bgL" secondAttribute="bottom" constant="32" id="0Jh-XS-9kx"/>
-                            <constraint firstItem="hp6-Ow-UnC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="3Hl-WX-u3u"/>
+                            <constraint firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="3Hl-WX-u3u"/>
                             <constraint firstItem="poN-UU-mtJ" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="7fi-EZ-wl1"/>
-                            <constraint firstItem="hp6-Ow-UnC" firstAttribute="trailing" secondItem="poN-UU-mtJ" secondAttribute="trailing" id="Dfg-MT-hWV"/>
+                            <constraint firstAttribute="trailing" secondItem="poN-UU-mtJ" secondAttribute="trailing" id="Dfg-MT-hWV"/>
                             <constraint firstItem="WMY-cl-JTG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="72" id="JRN-0H-HRj"/>
-                            <constraint firstItem="hp6-Ow-UnC" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="LCa-tC-ykw"/>
+                            <constraint firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="LCa-tC-ykw"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="KxR-NH-bgL" secondAttribute="trailing" constant="16" id="Npa-i3-0Ra"/>
-                            <constraint firstItem="poN-UU-mtJ" firstAttribute="top" secondItem="hp6-Ow-UnC" secondAttribute="bottom" id="TFB-RJ-TW3"/>
                             <constraint firstItem="WMY-cl-JTG" firstAttribute="centerX" secondItem="KxR-NH-bgL" secondAttribute="centerX" id="TTz-po-ZvD"/>
-                            <constraint firstItem="gmP-cw-eQd" firstAttribute="top" secondItem="hp6-Ow-UnC" secondAttribute="bottom" constant="49" id="VFa-fN-W3F"/>
-                            <constraint firstItem="hp6-Ow-UnC" firstAttribute="leading" secondItem="poN-UU-mtJ" secondAttribute="leading" id="fP9-5v-36u"/>
+                            <constraint firstAttribute="leading" secondItem="poN-UU-mtJ" secondAttribute="leading" id="fP9-5v-36u"/>
                             <constraint firstItem="KxR-NH-bgL" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="jmx-gI-giA"/>
                             <constraint firstItem="gmP-cw-eQd" firstAttribute="centerX" secondItem="WMY-cl-JTG" secondAttribute="centerX" id="qMU-38-rVm"/>
                             <constraint firstItem="gmP-cw-eQd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="85" id="vZh-fd-ql4"/>
-                            <constraint firstItem="hp6-Ow-UnC" firstAttribute="centerX" secondItem="gmP-cw-eQd" secondAttribute="centerX" id="wWj-Yq-QdB"/>
-                            <constraint firstAttribute="trailing" secondItem="hp6-Ow-UnC" secondAttribute="trailing" id="wdW-nq-VcM"/>
+                            <constraint firstAttribute="centerX" secondItem="gmP-cw-eQd" secondAttribute="centerX" id="wWj-Yq-QdB"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
